force-app/main/default/objects/Appointment__c/fields/Booking_Channel__c.field-meta.xml
<CustomField>
    <fullName>Booking_Channel__c</fullName>
    <label>Appointment Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>