force-app/main/default/objects/Appointment__c/fields/CalendarId__c.field-meta.xml
<CustomField>
    <fullName>CalendarId__c</fullName>
    <label>CalendarId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>