force-app/main/default/objects/Appointment__c/fields/Clinic__c.field-meta.xml
<CustomField>
    <fullName>Clinic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinic</label>
    <referenceTo>Clinic__c</referenceTo>
    <relationshipLabel>Appointment</relationshipLabel>
    <relationshipName>Appointment</relationshipName>
    <type>Lookup</type>
</CustomField>