force-app/main/default/objects/Appointment__c/fields/PatientEmail__c.field-meta.xml
<CustomField>
    <fullName>PatientEmail__c</fullName>
    <formula>Patient__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Email</label>
    <type>Text</type>
</CustomField>