force-app/main/default/objects/Appointment__c/fields/Physician_Email__c.field-meta.xml
<CustomField>
    <fullName>Physician_Email__c</fullName>
    <label>Physician Email</label>
    <type>Email</type>
</CustomField>