force-app/main/default/objects/Appointment__c/fields/PhysicianEmail__c.field-meta.xml
<CustomField>
    <fullName>PhysicianEmail__c</fullName>
    <formula>Physician__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physician Email</label>
    <type>Text</type>
</CustomField>