force-app/main/default/objects/Appointment__c/fields/StartTiming__c.field-meta.xml
<CustomField>
    <fullName>StartTiming__c</fullName>
    <label>Start Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>